BradkenProduction/force-app/main/default/objects/Support_Register__c/Support_Register__c.object-meta.xml
<CustomObject>
    <description>Allows tracking of issues, queries, and project work to be monitored by FullCRM</description>
    <label>Support Register</label>
    <nameField>
        <displayFormat>FC-{0000}</displayFormat>
        <label>Ticket ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Support Register</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>