BradkenProduction/force-app/main/default/objects/Support_Register__c/fields/Area__c.field-meta.xml
<CustomField>
    <fullName>Area__c</fullName>
    <label>Area</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>3rd Party Connectors</fullName>
            </value>
            <value>
                <fullName>Accounts</fullName>
            </value>
            <value>
                <fullName>All Objects</fullName>
            </value>
            <value>
                <fullName>Automation Rules</fullName>
            </value>
            <value>
                <fullName>Classic Lightning Builder</fullName>
            </value>
            <value>
                <fullName>Contacts</fullName>
            </value>
            <value>
                <fullName>Contracts</fullName>
            </value>
            <value>
                <fullName>Customer Purchase Order</fullName>
            </value>
            <value>
                <fullName>Dynamic Lists</fullName>
            </value>
            <value>
                <fullName>Engagement Studio</fullName>
            </value>
            <value>
                <fullName>Form Handlers</fullName>
            </value>
            <value>
                <fullName>Invoice</fullName>
            </value>
            <value>
                <fullName>Landing Pages</fullName>
            </value>
            <value>
                <fullName>Layout Template</fullName>
            </value>
            <value>
                <fullName>Leads</fullName>
            </value>
            <value>
                <fullName>Lightning Email Builder</fullName>
            </value>
            <value>
                <fullName>Marketing Analytics</fullName>
            </value>
            <value>
                <fullName>Opportunities</fullName>
            </value>
            <value>
                <fullName>Opportunity &amp; Quote</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Pardot Field Mapping</fullName>
            </value>
            <value>
                <fullName>Pardot Forms</fullName>
            </value>
            <value>
                <fullName>Pardot Scoring/Grading</fullName>
            </value>
            <value>
                <fullName>QLE</fullName>
            </value>
            <value>
                <fullName>QLI</fullName>
            </value>
            <value>
                <fullName>Quote</fullName>
            </value>
            <value>
                <fullName>Reports &amp; Dashboards</fullName>
            </value>
            <value>
                <fullName>Site Visit</fullName>
            </value>
            <value>
                <fullName>Static Lists</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>