BradkenProduction/force-app/main/default/objects/Support_Register__c/fields/Currently_With__c.field-meta.xml
<CustomField>
    <fullName>Currently_With__c</fullName>
    <defaultValue>&quot;FullCRM&quot;</defaultValue>
    <label>Currently With</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Salesforce</fullName>
            </value>
            <value>
                <fullName>FullCRM</fullName>
                <default>true</default>
                <label>FullCRM</label>
            </value>
            <value>
                <fullName>Client</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>