BradkenProduction/force-app/main/default/objects/Support_Register__c/fields/Date_Closed__c.field-meta.xml
<CustomField>
    <fullName>Date_Closed__c</fullName>
    <label>Closed Date</label>
    <type>Date</type>
</CustomField>