BradkenProduction/force-app/main/default/objects/Support_Register__c/fields/Priority_Flag__c.field-meta.xml
<CustomField>
    <fullName>Priority_Flag__c</fullName>
    <formula>IF (ISPICKVAL(Priority__c , &apos;Normal&apos;),  IMAGE(&quot;/resource/TempLow&quot;, &apos;Normal&apos;, 32,35),
IF (ISPICKVAL( Priority__c, &apos;Critical&apos;),  IMAGE(&quot;/resource/TempHigh&quot;, &apos;Critical&apos;, 32,35), 
IF (ISPICKVAL( Priority__c, &apos;Stand Still&apos;),  IMAGE(&quot;/resource/TempCritical&quot;, &apos;Stand Still&apos;, 32,35), NULL ))) + TEXT(Priority__c)</formula>
    <label>Priority Flag</label>
    <type>Text</type>
</CustomField>