BradkenProduction/force-app/main/default/objects/Support_Register__c/fields/Project_SOW__c.field-meta.xml
<CustomField>
    <fullName>Project_SOW__c</fullName>
    <inlineHelpText>Used for when the ticket belongs to a seperate project</inlineHelpText>
    <label>Project SOW#</label>
    <length>10</length>
    <type>Text</type>
</CustomField>