BradkenProduction/force-app/main/default/objects/Support_Register__c/fields/Request_Type__c.field-meta.xml
<CustomField>
    <fullName>Request_Type__c</fullName>
    <label>Request Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bug_Issue</fullName>
                <default>true</default>
                <label>Bug/Issue</label>
            </value>
            <value>
                <fullName>Question</fullName>
            </value>
            <value>
                <fullName>Development Roadmap</fullName>
            </value>
            <value>
                <fullName>Feature Request</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>