BradkenProduction/force-app/main/default/objects/Support_Register__c/fields/SF_Support_Case__c.field-meta.xml
<CustomField>
    <fullName>SF_Support_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SF Support Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>FC Support Register</relationshipLabel>
    <relationshipName>Support_Register</relationshipName>
    <type>Lookup</type>
</CustomField>