BradkenProduction/force-app/main/default/objects/Support_Register__c/recordTypes/Pardot.recordType-meta.xml
<RecordType>
    <fullName>Pardot</fullName>
    <active>true</active>
    <description>Pardot &amp; other marketing related tickets</description>
    <label>Pardot</label>
</RecordType>