BradkenProduction/force-app/main/default/objects/Support_Register__c/recordTypes/Salesforce_CRM.recordType-meta.xml
<RecordType>
    <fullName>Salesforce_CRM</fullName>
    <active>true</active>
    <description>Core Salesforce CRM related tickets</description>
    <label>Salesforce CRM</label>
</RecordType>