BradkenProduction/force-app/main/default/objects/Support_Register__c/validationRules/Close_date_required_before_closing.validationRule-meta.xml
<ValidationRule>
    <fullName>Close_date_required_before_closing</fullName>
    <active>true</active>
    <description>Close date must be entered before the Status can be updated to Closed</description>
    <errorConditionFormula>AND(
ISPICKVAL(Status__c, &quot;Closed&quot;), 
ISBLANK( Date_Closed__c )
)</errorConditionFormula>
    <errorMessage>Please enter a Close Date before closing the Case</errorMessage>
</ValidationRule>