BradkenProduction/force-app/main/default/objects/Support_Register__c/listViews/All_Open_Pardot_Tickets.listView-meta.xml
<ListView>
    <fullName>All_Open_Pardot_Tickets</fullName>
    <columns>NAME</columns>
    <columns>Area__c</columns>
    <columns>Subject__c</columns>
    <columns>Currently_With__c</columns>
    <columns>Status__c</columns>
    <columns>Priority_Flag__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>New,Working On,Ready to Test,Pending Deployment,On Hold,Project</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Support_Register__c.Pardot</value>
    </filters>
    <label>Pardot Open Tickets</label>
</ListView>