BradkenProduction/force-app/main/default/objects/Support_Register__c/listViews/All_Pardot_Closed_Tickets.listView-meta.xml
<ListView>
    <fullName>All_Pardot_Closed_Tickets</fullName>
    <columns>NAME</columns>
    <columns>Subject__c</columns>
    <columns>Currently_With__c</columns>
    <columns>Status__c</columns>
    <columns>Priority_Flag__c</columns>
    <columns>Date_Closed__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Closed</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Support_Register__c.Pardot</value>
    </filters>
    <label>Pardot Closed Tickets</label>
</ListView>