BradkenProduction/force-app/main/default/objects/Support_Register__c/listViews/All_Pardot_On_Hold_Tickets.listView-meta.xml
<ListView>
    <fullName>All_Pardot_On_Hold_Tickets</fullName>
    <columns>NAME</columns>
    <columns>Area__c</columns>
    <columns>Subject__c</columns>
    <columns>Priority_Flag__c</columns>
    <columns>Status__c</columns>
    <columns>Created_Date__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>On Hold</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Support_Register__c.Pardot</value>
    </filters>
    <label>Pardot On-Hold Tickets</label>
</ListView>