BradkenProduction/force-app/main/default/objects/Support_Register__c/listViews/All_Salesforce_CRM_On_Hold_Tickets.listView-meta.xml
<ListView>
    <fullName>All_Salesforce_CRM_On_Hold_Tickets</fullName>
    <columns>NAME</columns>
    <columns>Area__c</columns>
    <columns>Subject__c</columns>
    <columns>Priority_Flag__c</columns>
    <columns>Status__c</columns>
    <columns>Created_Date__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Project</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Support_Register__c.Salesforce_CRM</value>
    </filters>
    <label>Salesforce CRM On-Hold Tickets</label>
</ListView>