BradkenProduction/force-app/main/default/objects/Support_Register__c/listViews/Salesforce_CRM_Closed_Tickets_L7D.listView-meta.xml
<ListView>
    <fullName>Salesforce_CRM_Closed_Tickets_L7D</fullName>
    <columns>NAME</columns>
    <columns>Subject__c</columns>
    <columns>Currently_With__c</columns>
    <columns>Status__c</columns>
    <columns>Priority_Flag__c</columns>
    <columns>Date_Closed__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Closed</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Support_Register__c.Salesforce_CRM</value>
    </filters>
    <filters>
        <field>Date_Closed__c</field>
        <operation>equals</operation>
        <value>LAST_N_DAYS:6</value>
    </filters>
    <label>Salesforce CRM Closed Tickets L7D</label>
</ListView>